fixed column alignment

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -70,9 +70,6 @@ table, th, td {
 
 .parent {
   display: flex;
-  flex-direction: column;
-  /* justify-content: flex-end; */
-
 }
 
 .item {
@@ -126,9 +123,11 @@ body {
   display: flex;
   flex-direction: column;
 }
+
 .content {
   flex: 1 0 auto;
 }
+
 .footer {
   flex-shrink: 0;
 }
@@ -220,7 +219,7 @@ body {
 
 .user-card-body {
   background-color: #d8e5eb;
-  width: 210px;
+  width: 190px;
   height: 240px;
 }
 
